--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <span>2023</span>
           <span>Despcription</span>
           <span class="options">
-            <i class="fa-solid fa-pen-to-square"></i>
+            <i data-bs-toggle="modal" data-bs-target="#form" onClick="editeTask(this)"  class="fa-solid fa-pen-to-square"></i>
             <i onClick="deleteTask(this)" class="fa-solid fa-trash"></i>
           </span>
         </div>
@@ -72,7 +72,7 @@
           <span>2023</span>
           <span>Despcription</span>
           <span class="options">
-            <i class="fa-solid fa-pen-to-square"></i>
+            <i data-bs-toggle="modal" data-bs-target="#form" onClick="editeTask(this)"  class="fa-solid fa-pen-to-square"></i>
             <i onClick="deleteTask(this)" class="fa-solid fa-trash"></i>
           </span>
         </div>
