phone hanter pactices

--- a/phoneHanter-2nd/index.html
+++ b/phoneHanter-2nd/index.html
@@ -10,19 +10,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header>
-        <h1></h1>
-    </header>
-   <section id="countries" class="grid md:grid-cols-3 sm:grid-cols-1 ">
-   
-   </section>
-   <section>
-    <div class="text-center py-6">
-        <button onclick="showAllCountryTogether()" class="bg-green-500 px-5 rounded-md py-2 text-center m-auto">See All</button>
-    </div>
-   </section>
-        
-    </h1>
-    <script src="./index.js"></script>
+    <h1 class="text-center text-lg py-8">All phones </h1>
+    <!-- card section -->
+    <section id="phones">
+      
+    </section>
 </body>
+<script src="./index.js"></script>
 </html>
