--- a/phoneHanter-2nd/index.html
+++ b/phoneHanter-2nd/index.html
@@ -11,8 +11,14 @@
 </head>
 <body>
     <h1 class="text-center text-lg py-8">All phones </h1>
+    <!-- search items -->
+    <section class="px-10">
+        <input id="searchField" type="text" placeholder="search heare" class="input input-bordered  input-primary w-full max-w-xs" /><br>
+        <button id="btn-search" class="bg-blue-400 rounded-md px-10 py-2 mt-5">search</button>
+    </section>
+   
     <!-- card section -->
-    <section id="phones">
+    <section class="grid md:grid-cols-3 grid-cols-1 gap-y-10 px-10" id="phones">
       
     </section>
 </body>
